--- a/main.html
+++ b/main.html
@@ -1,16 +1,31 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Styled HTML Block</title>
+  <style>
+    /* Container styling */
+    .main {
+      width: 200px;
+      background-color: purple;
+      border-left: 5px solid green; /* Left side border */
+      padding: 10px; /* Padding on all sides */
+    }
+
+    /* Heading styling */
+    .heading#heading {
+      font-size: 20px; /* Font size */
+      color: white; /* Text color */
+      text-decoration: underline; /* Underline text */
+    }
+  </style>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
+  <!-- Container -->
+  <div class="main">
+    <!-- Heading inside the container -->
+    <h1 class="heading" id="heading">This is a Heading</h1>
+  </div>
 </body>
-
 </html>
